# Eve

./: .gitattributes  .gitignore  .lein-repl-history  ATTRIBUTIONS.md  Attributions.txt  CONTRIBUTING.md  Dockerfile  Gulpfile.js  LICENSE  Makefile  Procfile  README.md  aurora-lt.cljs  bootstrap.js  bootstrap.js.map  circle.yml  design.md  devcards.html  docker-compose.yml  editor.html  example-real.cljs  example.cljs  foo.js  getRocks.sh  ide.html  index.html  index2.html  install-multirust.sh  package.json  project.clj  readme.md  renderer.html  repl.html  run.bat  run.js  run.sh  server.evedb  server.js  syntax_diagrams.html  test.sh  (+2 more)
runtime/: .gitignore  Cargo.toml  bootstrap  test_output
runtime/examples/: five-square  solver.rs
runtime/src/: authenticate.rs  client.rs  compiler.rs  flow.rs  function.rs  index.rs  interpreter.rs  lib.rs  login.rs  map.rs  primitive.rs  query.rs  relation.rs  schema.rs  server.rs  solver.rs  static_server.rs  test.rs  value.rs  view.rs
runtime/test-inputs/: add  add-2nd-aggregate  aggregate-group-over-same-view  constant-constraint-right  constant-primitive-constraint  constraint-with-constant-field  crash-on-aggregate-constraint  demo  primitive-constraint-with-constant-field  regression-1438292742  regression-1438390685  regression-1438731109  regression-1438906655  regression-1439324985  regression-1439332266  regression-1439510054  regression-1439514467  regression-1440205600  regression-151434721635322  regression-64094286567312
runtime/test-outputs/: add  primitive-constraint-with-constant-field  regression-1438292742  (+8 more)
(+975 files in other folders)
