[package]

name = "eve"
version = "0.0.1"
authors = ["Jamie Brandon <jamie@scattered-thoughts.net>",
	   "Corey Montella <corey@kodowa.com>"]

[dependencies]
rand = "*"
time = "*"
rustc-serialize = "*"
websocket = "*"
hyper = "*"
cookie = "*"
url = "*"
mime = "*"
cbor = "*"
conduit-mime-types = "*"

[profile.release]
debug = true
